# TCC

./: .gitignore  algoritmoConstrucaoDeMapa.txt  algoritmoConstrucaoDeMapa.txt]~  algoritmoConstrucaoDeMapa.txt~
trunk/: Diagramas.asta  Documento de especificacao.odt  Documento de projeto.odt  consoleConfigFile.txt
trunk/MatLab/: .gitignore  plotposition.m  velocityplot.m
trunk/MatLab/helloWorld/: Listener.m  Talker.m  testCallbackHelloWorld.m
trunk/MatLab/scripts/: Main.m  Main2.m  ativaFuzzy.m  calcSetoresAngulares.m  getLaserValues.m  giraRobo.m  init_vrep.m  setaVelocidadeDireita.m  setaVelocidadeEsquerda.m
trunk/MatLab/src/+avoid_obstacles/: Main.m  fuzzy.slx  fuzzy_desvio_objeto.fis
trunk/MatLab/src/+avoid_obstacles/+src/: AvoidObstaclesController.m  FuzzyRule.m
trunk/MatLab/src/+avoid_obstacles/+src/+constants/: AvoidObstaclesConstants.m  FuizzyRuleConstants.m~
trunk/MatLab/src/+avoid_obstacles/+src/+enumerations/: InputQuantifier.m
trunk/MatLab/src/+common/+src/: BaseRosNode.m  RosNodeInterface.m
trunk/MatLab/src/+common/+src/+excpetions/: MethodNotImplementedException.m
trunk/MatLab/src/common/: BaseRosNode.m
trunk/MatLab/src/common/src/: RosNodeInterface.m
trunk/Monografia/: Latex.txt
trunk/catkin_ws/src/: .gitignore
trunk/catkin_ws/src/common/: CMakeLists.txt  package.xml
trunk/catkin_ws/src/common/include/common/: BaseRosNode.h  RosNodeInterface.h
trunk/catkin_ws/src/common/include/common/error/: MethodNotImplementedError.h
trunk/catkin_ws/src/common/include/common/utils/: GridUtils.h  MatrixUtils.h  NumericUtils.h  OdometryUtils.h  VRepUtils.h
trunk/catkin_ws/src/common/src/: BaseRosNode.cpp
trunk/catkin_ws/src/common/src/error/: MethodNotImplemented.cpp
trunk/catkin_ws/src/common/src/utils/: GridUtils.cpp  MatrixUtils.cpp  NumericUtils.cpp  OdometryUtils.cpp  VRepUtils.cpp
trunk/catkin_ws/src/common/srv/: cellGridPosition.srv  pathToTarget.srv
trunk/catkin_ws/src/controlador_de_trajetoria/: CMakeLists.txt  package.xml
trunk/catkin_ws/src/controlador_de_trajetoria/include/controlador_de_trajetoria/: BaseRosNode.h  MovimentationExecutor.h  RosNodeInterface.h
trunk/catkin_ws/src/controlador_de_trajetoria/include/controlador_de_trajetoria/controller/: MovimentControllerInterface.h  ProportionalMovimentController.h
trunk/catkin_ws/src/controlador_de_trajetoria/include/controlador_de_trajetoria/error/: MethodNotImplementedError.h
trunk/catkin_ws/src/controlador_de_trajetoria/include/controlador_de_trajetoria/messages/: MessagesHandler.h  MoveRobotWrapper.h
trunk/catkin_ws/src/controlador_de_trajetoria/include/controlador_de_trajetoria/movimentation/: MovimentationErrorEnum.h  MovimentationExecutor.h
trunk/catkin_ws/src/controlador_de_trajetoria/include/controlador_de_trajetoria/movimentation/controller/: ControllerInterface.h  PIDController.h  PIDMovimentController.h  ProportionalMovimentController.h
trunk/catkin_ws/src/controlador_de_trajetoria/include/controlador_de_trajetoria/position/: PositionHandler.h
trunk/catkin_ws/src/controlador_de_trajetoria/include/controlador_de_trajetoria/utils/: MovimentationUtils.h
trunk/catkin_ws/src/controlador_de_trajetoria/msg/: Move_robot.msg  Move_robot_multi_array.msg  Movimentation_error.msg
trunk/catkin_ws/src/controlador_de_trajetoria/src/: BaseRosNode.cpp  Messages_handler.cpp  MovimentationExecutor.cpp  Movimentation_executor.cpp  Position_handler.cpp
trunk/catkin_ws/src/controlador_de_trajetoria/src/controller/: ProportionalMovimentController.cpp
trunk/catkin_ws/src/controlador_de_trajetoria/src/error/: MethodNotImplemented.cpp
trunk/catkin_ws/src/controlador_de_trajetoria/src/messages/: MessagesHandler.cpp  MoveRobotWrapper.cpp
trunk/catkin_ws/src/controlador_de_trajetoria/src/movimentation/: MovimentationErrorEnum.cpp  MovimentationExecutor.cpp
trunk/catkin_ws/src/controlador_de_trajetoria/src/movimentation/controller/: PIDController.cpp  PIDMovimentController.cpp  ProportionalMovimentController.cpp
trunk/catkin_ws/src/controlador_de_trajetoria/src/position/: PositionHandler.cpp
trunk/catkin_ws/src/controlador_de_trajetoria/src/utils/: MovimentationUtils.cpp
trunk/catkin_ws/src/controlador_de_trajetoria/srv/: Move_robot_service.srv
trunk/catkin_ws/src/coordinator/: CMakeLists.txt  package.xml
trunk/catkin_ws/src/coordinator/include/coordinator/: Coordinator.h
trunk/catkin_ws/src/coordinator/src/: Coordinator.cpp
trunk/catkin_ws/src/neural_network/: CMakeLists.txt  NewRNATrain.data  package.xml  rna.net  rna2.net  rna3.net  rnaTrain.data  xor_float.net
trunk/catkin_ws/src/neural_network/include/neural_network/: NeuralNetwork.h
trunk/catkin_ws/src/neural_network/src/: NeuralNetwork.cpp
trunk/catkin_ws/src/path_planner/: CMakeLists.txt  package.xml
trunk/catkin_ws/src/path_planner/include/path_planner/: GridCell.h  PathDrawer.h  PathPlanner.h
trunk/catkin_ws/src/path_planner/include/path_planner/search/: AStar.h  BaseGridCell.h  CellInterface.h  GridCellInterface.h  SearchAlgorithmInterface .h  SearchAlgorithmInterface.h
trunk/catkin_ws/src/path_planner/include/path_planner/search/AStar/: AStar.h  AStarGridCell.h
trunk/catkin_ws/src/path_planner/include/path_planner/utils/: PathPlannerUtils.h
trunk/catkin_ws/src/path_planner/src/: GridCell.cpp  PathDrawer.cpp  PathPlanner.cpp
trunk/catkin_ws/src/path_planner/src/search/: AStar.cpp  BaseGridCell.cpp
trunk/catkin_ws/src/path_planner/src/search/AStar/: AStar.cpp  AStarGridCell.cpp
trunk/catkin_ws/src/path_planner/src/utils/: PathPlannerUtils.cpp
trunk/catkin_ws/src/rosaria_v_rep/: CMakeLists.txt  package.xml
trunk/catkin_ws/src/rosaria_v_rep/include/rosaria_v_rep/: RosAriaVRep.h
trunk/catkin_ws/src/rosaria_v_rep/src/: RosAriaVRep.cpp
