<?xml version="1.0"?>
<package>
  <name>rosaria_v_rep</name>
  <version>1.0.0</version>
  <description>This is a package to simulate rosaria with V-Rep </description>

  <maintainer email="ecomtpiago@hotmail.com">Tiago Rafael Volkmann Coelho</maintainer>
  <maintainer email="kordeyro@gmail.com">André C. Coerdeiro</maintainer> 

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="website">https://github.com/ecomptiago/TCC</url>

  <author email="ecomtpiago@hotmail.com">Tiago Rafael Volkmann Coelho</author>
  <author email="kordeyro@gmail.com">André C. Coerdeiro</author>

  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
     <build_depend>message_generation</build_depend> 
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
     <run_depend>message_runtime</run_depend> 
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
 !-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
